--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SUBSTRADE_NODE_URL=wss://rco-para.subsocial.network
 MNEMONIC=bottom drive obey lake curtain smoke basket hold race lonely fit walk//Alice
 CLIENT_ID=IG3a1OQE8sLs9-jntW9cIA
 CLIENT_SECRET=GHnMjqaOPFthLm3_qztuyKY1DgY0xQ
+HOST_DOMAIN=https://subsocial-kappa.vercel.app
